@@ -57,6 +57,9 @@ Linker script.
 .TP
 .B -v, --version
 Show the version.
+.TP
+.B -w, --processor-mismatch
+Disable "processor mismatch" warning.
 .SH SEE ALSO
 gputils(1)
 .SH AUTHOR
